# ladybird_MRI

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yaml  main.bat  main.py  main_local.py  main_web.py  pyproject.toml  requirements.txt  requirements_local.txt  setup.sh  start_app.bat  start_app.py
.streamlit/: config.toml
Ladybird_MRI_viz/: MRI_canvas.py  MRI_load_plot.py  MRIwin.py  load_volume.py  main_window.py  plot_volume.py  zoomed_window.py
Ladybird_MRI_viz/examples/dicom/: 0000  0002  0006  0009  0011  0012  0013  0015  0016  0017  0018  0021  0023  0025  0027  0029
Ladybird_MRI_viz/widgets/: custom_slider.py
ladybird_MRI_app/: __init__.py  config_file.py  load_volume.py  messageBox_popup.py  mri_main_window.py  plot_volume.py  zoomed_window.py
ladybird_MRI_app/static/mri_examples/atlas/: License.txt
ladybird_MRI_app/static/mri_examples/dicom/: 0003  0022
ladybird_MRI_app/widgets/: custom_slider.py
modules/: config_file.py  mri_main_window.py  plot_volume.py  zoomed_window.py
modules/static/mri_examples/atlas/: License.txt
modules/static/mri_examples/dicom/: 0004  0010  0020  0026  0028
src/env_global/config/: config.py
src/env_global/examples/mri_examples/dicom/: 0001  0005  0007  0008  0014  (+2 more)
src/env_global/modules/: load_volume.py
src/env_local/modules/: __init__.py  messageBox_popup.py  mri_main_window.py  plot_volume.py  zoomed_window.py
src/env_local/widgets/: custom_slider.py
src/env_web/: styles.css
src/env_web/config/: config.py
src/env_web/modules/: home.py  plot_volume.py  ui_components.py  utils.py
