[tool.poetry]
name = "ladybird-mri"
version = "0.1.0"
description = ""
authors = ["Ludovic Gardy <ludovic.gardy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.43.1"
matplotlib = "^3.10.1"
pydicom = "^3.0.1"
scikit-image = "^0.25.2"
scipy = "^1.15.2"
dotenv = "^0.9.9"
nibabel = "^5.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
