[project]
name = "ladybird-mri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "nibabel>=5.3.2",
    "pydicom>=2.4.4",
    "python-dotenv>=1.1.0",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "streamlit>=1.44.1",
]
